// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Luna Moon Companion - Behavioral Driven Tests > Feature: Visual DOM Structure Snapshots > Scenario: Closed State Snapshot matches the exact design pattern 1`] = `
"

  <!-- The Draggable Moon -->
  <div class="moon-container" id="moon" data-tauri-drag-region="">
    <div class="moon-wrapper" id="moon-wrapper">
      <div class="moon-glow"></div>
      <div class="moon-sphere">
        <!-- Premium Crescent Moon SVG with a glowing lunar gradient and cute craters -->
        <svg class="moon-svg" viewBox="0 0 100 100">
          <defs>
            <linearGradient id="crescent-grad" x1="0%" y1="0%" x2="100%" y2="100%">
              <stop offset="0%" stop-color="#ffffff"></stop>
              <stop offset="35%" stop-color="#e2ecfd"></stop>
              <stop offset="70%" stop-color="#8ab4f8"></stop>
              <stop offset="100%" stop-color="#1b2a4a"></stop>
            </linearGradient>
            <filter id="glow-filter" x="-20%" y="-20%" width="140%" height="140%">
              <feGaussianBlur stdDeviation="3" result="blur"></feGaussianBlur>
              <feComposite in="SourceGraphic" in2="blur" operator="over"></feComposite>
            </filter>
          </defs>
          <!-- Crescent Path: perfectly smooth golden/blue crescent curve -->
          <path d="M 62 12 A 38 38 0 1 0 88 62 A 30 30 0 1 1 62 12 Z" fill="url(#crescent-grad)" filter="url(#glow-filter)"></path>
          <!-- Cute Craters inside the crescent body -->
          <circle cx="40" cy="42" r="4.5" fill="#05070f" opacity="0.35"></circle>
          <circle cx="34" cy="60" r="3.5" fill="#05070f" opacity="0.35"></circle>
          <circle cx="48" cy="28" r="3" fill="#05070f" opacity="0.35"></circle>
          <circle cx="28" cy="48" r="2.5" fill="#05070f" opacity="0.3"></circle>
        </svg>
      </div>
    </div>
  </div>

  <!-- The Glassmorphic Chat Panel -->
  <div class="chat-panel" id="chat-panel">
    <!-- Chat Header supports dragging the native window too! -->
    <div class="chat-header" data-tauri-drag-region="">
      <div class="chat-title-group">
        <div class="chat-avatar"></div>
        <div class="chat-meta">
          <h2>Luna Companion</h2>
          <span id="connection-status" class="connecting">Connecting...</span>
          <!-- Active channel (stable / dev), additive. Kept as a <small>, NOT a
               <span>, so the \`.chat-meta span::before\` dot rule doesn't draw a
               status dot next to it. Hidden until a profile is resolved so older
               state degrades gracefully. -->
          <small id="active-profile" title="Active channel: stable">stable</small>
          <!-- Build identity from the server's hello frame (additive). Kept as a
               <small>, NOT a <span>, so the \`.chat-meta span::before\` dot rule
               doesn't draw a status dot next to it. Hidden until populated. -->
          <small id="build-sha" hidden=""></small>
        </div>
      </div>
      <div class="header-actions">
        <button class="settings-btn" id="new-chat" aria-label="New conversation" title="New conversation">
          <svg viewBox="0 0 24 24" width="15" height="15" stroke="currentColor" stroke-width="2.5" fill="none" stroke-linecap="round" stroke-linejoin="round">
            <line x1="12" y1="5" x2="12" y2="19"></line>
            <line x1="5" y1="12" x2="19" y2="12"></line>
          </svg>
        </button>
        <button class="settings-btn" id="toggle-settings" aria-label="Settings">
          <svg viewBox="0 0 24 24" width="14" height="14" stroke="currentColor" stroke-width="2.5" fill="none" stroke-linecap="round" stroke-linejoin="round">
            <circle cx="12" cy="12" r="3"></circle>
            <path d="M19.4 15a1.65 1.65 0 0 0 .33 1.82l.06.06a2 2 0 1 1-2.83 2.83l-.06-.06a1.65 1.65 0 0 0-1.82-.33 1.65 1.65 0 0 0-1 1.51V21a2 2 0 0 1-4 0v-.09A1.65 1.65 0 0 0 9 19.4a1.65 1.65 0 0 0-1.82.33l-.06.06a2 2 0 1 1-2.83-2.83l.06-.06a1.65 1.65 0 0 0 .33-1.82 1.65 1.65 0 0 0-1.51-1H3a2 2 0 0 1 0-4h.09A1.65 1.65 0 0 0 4.6 9a1.65 1.65 0 0 0-.33-1.82l-.06-.06a2 2 0 1 1 2.83-2.83l.06.06a1.65 1.65 0 0 0 1.82.33H9a1.65 1.65 0 0 0 1-1.51V3a2 2 0 0 1 4 0v.09a1.65 1.65 0 0 0 1 1.51 1.65 1.65 0 0 0 1.82-.33l.06-.06a2 2 0 1 1 2.83 2.83l-.06.06a1.65 1.65 0 0 0-.33 1.82V9a1.65 1.65 0 0 0 1.51 1H21a2 2 0 0 1 0 4h-.09a1.65 1.65 0 0 0-1.51 1z"></path>
          </svg>
        </button>
        <button class="close-btn" id="close-chat" aria-label="Close Chat">
          <svg viewBox="0 0 24 24" width="14" height="14" stroke="currentColor" stroke-width="2.5" fill="none" stroke-linecap="round" stroke-linejoin="round">
            <line x1="18" y1="6" x2="6" y2="18"></line>
            <line x1="6" y1="6" x2="18" y2="18"></line>
          </svg>
        </button>
      </div>
    </div>
    
    <!-- Settings Panel (Overlays chat content) -->
    <div class="settings-panel" id="settings-panel">
      <div class="settings-content">
        <h3>App Settings</h3>
        
        <div class="setting-item">
          <div class="setting-info">
            <span class="setting-label">Always on Top</span>
            <span class="setting-desc">Keep Luna floating above other windows</span>
          </div>
          <label class="switch">
            <input type="checkbox" id="always-on-top-toggle" checked="">
            <span class="slider"></span>
          </label>
        </div>
        
        <div class="setting-item">
          <div class="setting-info">
            <span class="setting-label">Close on Click Away</span>
            <span class="setting-desc">Collapse chat automatically when unfocused</span>
          </div>
          <label class="switch">
            <input type="checkbox" id="close-on-blur-toggle">
            <span class="slider"></span>
          </label>
        </div>
        
        <div class="setting-item">
          <div class="setting-info">
            <span class="setting-label">Global Shortcut</span>
            <span class="setting-desc">Press shortcut to toggle Luna window</span>
          </div>
          <div class="shortcut-recorder-group">
            <input type="text" class="shortcut-input" id="shortcut-input" readonly="" value="⌥Space">
            <button type="button" class="record-btn" id="record-shortcut-btn">Record</button>
          </div>
        </div>

        <div class="setting-item">
          <div class="setting-info">
            <span class="setting-label">Channel</span>
            <span class="setting-desc">Switch this moon between the stable and dev servers</span>
          </div>
          <select id="channel-select" class="channel-select">
            <option value="stable">Stable</option>
            <option value="dev">Dev</option>
          </select>
        </div>

        <div class="setting-item flex-column">
          <div class="setting-info" style="margin-bottom: 8px; width: 100%;">
            <span class="setting-label">WebSocket Server URL</span>
            <span class="setting-desc">Luna Central server WebSocket address (for the selected channel)</span>
          </div>
          <input type="text" id="ws-url-input" class="premium-text-input" placeholder="ws://127.0.0.1:4753/ui">
        </div>

        <div class="setting-item flex-column">
          <div class="setting-info" style="margin-bottom: 8px; width: 100%;">
            <span class="setting-label">Auth Token</span>
            <span class="setting-desc">Optional authentication bearer token</span>
          </div>
          <input type="password" id="ws-token-input" class="premium-text-input" placeholder="Enter token (optional)...">
        </div>
        
      </div>
      
      <div class="settings-footer">
        <button class="save-settings-btn" id="close-settings-btn">Done</button>
      </div>
    </div>
    
    <div class="chat-messages" id="chat-messages">
      <div class="msg assistant">
        Hey there! I am your native macOS Luna companion. Drag me anywhere on your screens, or click me to toggle this chat widget!
      </div>
    </div>
    
    <form class="chat-input-area" id="chat-form">
      <input type="text" class="chat-input" id="message-input" placeholder="Type a message..." autocomplete="off">
      <button type="submit" class="send-btn" aria-label="Send message">
        <svg viewBox="0 0 24 24">
          <path d="M2.01 21L23 12 2.01 3 2 10l15 2-15 2z"></path>
        </svg>
      </button>
    </form>
  </div>

  <script>/* elided for snapshot */</script>
"
`;

exports[`Luna Moon Companion - Behavioral Driven Tests > Feature: Visual DOM Structure Snapshots > Scenario: Open State Snapshot matches the exact design pattern 1`] = `
"

  <!-- The Draggable Moon -->
  <div class="moon-container" id="moon" data-tauri-drag-region="">
    <div class="moon-wrapper" id="moon-wrapper" style="transform: none;">
      <div class="moon-glow"></div>
      <div class="moon-sphere">
        <!-- Premium Crescent Moon SVG with a glowing lunar gradient and cute craters -->
        <svg class="moon-svg" viewBox="0 0 100 100">
          <defs>
            <linearGradient id="crescent-grad" x1="0%" y1="0%" x2="100%" y2="100%">
              <stop offset="0%" stop-color="#ffffff"></stop>
              <stop offset="35%" stop-color="#e2ecfd"></stop>
              <stop offset="70%" stop-color="#8ab4f8"></stop>
              <stop offset="100%" stop-color="#1b2a4a"></stop>
            </linearGradient>
            <filter id="glow-filter" x="-20%" y="-20%" width="140%" height="140%">
              <feGaussianBlur stdDeviation="3" result="blur"></feGaussianBlur>
              <feComposite in="SourceGraphic" in2="blur" operator="over"></feComposite>
            </filter>
          </defs>
          <!-- Crescent Path: perfectly smooth golden/blue crescent curve -->
          <path d="M 62 12 A 38 38 0 1 0 88 62 A 30 30 0 1 1 62 12 Z" fill="url(#crescent-grad)" filter="url(#glow-filter)"></path>
          <!-- Cute Craters inside the crescent body -->
          <circle cx="40" cy="42" r="4.5" fill="#05070f" opacity="0.35"></circle>
          <circle cx="34" cy="60" r="3.5" fill="#05070f" opacity="0.35"></circle>
          <circle cx="48" cy="28" r="3" fill="#05070f" opacity="0.35"></circle>
          <circle cx="28" cy="48" r="2.5" fill="#05070f" opacity="0.3"></circle>
        </svg>
      </div>
    </div>
  </div>

  <!-- The Glassmorphic Chat Panel -->
  <div class="chat-panel active" id="chat-panel">
    <!-- Chat Header supports dragging the native window too! -->
    <div class="chat-header" data-tauri-drag-region="">
      <div class="chat-title-group">
        <div class="chat-avatar"></div>
        <div class="chat-meta">
          <h2>Luna Companion</h2>
          <span id="connection-status" class="connecting">Connecting...</span>
          <!-- Active channel (stable / dev), additive. Kept as a <small>, NOT a
               <span>, so the \`.chat-meta span::before\` dot rule doesn't draw a
               status dot next to it. Hidden until a profile is resolved so older
               state degrades gracefully. -->
          <small id="active-profile" title="Active channel: stable">stable</small>
          <!-- Build identity from the server's hello frame (additive). Kept as a
               <small>, NOT a <span>, so the \`.chat-meta span::before\` dot rule
               doesn't draw a status dot next to it. Hidden until populated. -->
          <small id="build-sha" hidden=""></small>
        </div>
      </div>
      <div class="header-actions">
        <button class="settings-btn" id="new-chat" aria-label="New conversation" title="New conversation">
          <svg viewBox="0 0 24 24" width="15" height="15" stroke="currentColor" stroke-width="2.5" fill="none" stroke-linecap="round" stroke-linejoin="round">
            <line x1="12" y1="5" x2="12" y2="19"></line>
            <line x1="5" y1="12" x2="19" y2="12"></line>
          </svg>
        </button>
        <button class="settings-btn" id="toggle-settings" aria-label="Settings">
          <svg viewBox="0 0 24 24" width="14" height="14" stroke="currentColor" stroke-width="2.5" fill="none" stroke-linecap="round" stroke-linejoin="round">
            <circle cx="12" cy="12" r="3"></circle>
            <path d="M19.4 15a1.65 1.65 0 0 0 .33 1.82l.06.06a2 2 0 1 1-2.83 2.83l-.06-.06a1.65 1.65 0 0 0-1.82-.33 1.65 1.65 0 0 0-1 1.51V21a2 2 0 0 1-4 0v-.09A1.65 1.65 0 0 0 9 19.4a1.65 1.65 0 0 0-1.82.33l-.06.06a2 2 0 1 1-2.83-2.83l.06-.06a1.65 1.65 0 0 0 .33-1.82 1.65 1.65 0 0 0-1.51-1H3a2 2 0 0 1 0-4h.09A1.65 1.65 0 0 0 4.6 9a1.65 1.65 0 0 0-.33-1.82l-.06-.06a2 2 0 1 1 2.83-2.83l.06.06a1.65 1.65 0 0 0 1.82.33H9a1.65 1.65 0 0 0 1-1.51V3a2 2 0 0 1 4 0v.09a1.65 1.65 0 0 0 1 1.51 1.65 1.65 0 0 0 1.82-.33l.06-.06a2 2 0 1 1 2.83 2.83l-.06.06a1.65 1.65 0 0 0-.33 1.82V9a1.65 1.65 0 0 0 1.51 1H21a2 2 0 0 1 0 4h-.09a1.65 1.65 0 0 0-1.51 1z"></path>
          </svg>
        </button>
        <button class="close-btn" id="close-chat" aria-label="Close Chat">
          <svg viewBox="0 0 24 24" width="14" height="14" stroke="currentColor" stroke-width="2.5" fill="none" stroke-linecap="round" stroke-linejoin="round">
            <line x1="18" y1="6" x2="6" y2="18"></line>
            <line x1="6" y1="6" x2="18" y2="18"></line>
          </svg>
        </button>
      </div>
    </div>
    
    <!-- Settings Panel (Overlays chat content) -->
    <div class="settings-panel" id="settings-panel">
      <div class="settings-content">
        <h3>App Settings</h3>
        
        <div class="setting-item">
          <div class="setting-info">
            <span class="setting-label">Always on Top</span>
            <span class="setting-desc">Keep Luna floating above other windows</span>
          </div>
          <label class="switch">
            <input type="checkbox" id="always-on-top-toggle" checked="">
            <span class="slider"></span>
          </label>
        </div>
        
        <div class="setting-item">
          <div class="setting-info">
            <span class="setting-label">Close on Click Away</span>
            <span class="setting-desc">Collapse chat automatically when unfocused</span>
          </div>
          <label class="switch">
            <input type="checkbox" id="close-on-blur-toggle">
            <span class="slider"></span>
          </label>
        </div>
        
        <div class="setting-item">
          <div class="setting-info">
            <span class="setting-label">Global Shortcut</span>
            <span class="setting-desc">Press shortcut to toggle Luna window</span>
          </div>
          <div class="shortcut-recorder-group">
            <input type="text" class="shortcut-input" id="shortcut-input" readonly="" value="⌥Space">
            <button type="button" class="record-btn" id="record-shortcut-btn">Record</button>
          </div>
        </div>

        <div class="setting-item">
          <div class="setting-info">
            <span class="setting-label">Channel</span>
            <span class="setting-desc">Switch this moon between the stable and dev servers</span>
          </div>
          <select id="channel-select" class="channel-select">
            <option value="stable">Stable</option>
            <option value="dev">Dev</option>
          </select>
        </div>

        <div class="setting-item flex-column">
          <div class="setting-info" style="margin-bottom: 8px; width: 100%;">
            <span class="setting-label">WebSocket Server URL</span>
            <span class="setting-desc">Luna Central server WebSocket address (for the selected channel)</span>
          </div>
          <input type="text" id="ws-url-input" class="premium-text-input" placeholder="ws://127.0.0.1:4753/ui">
        </div>

        <div class="setting-item flex-column">
          <div class="setting-info" style="margin-bottom: 8px; width: 100%;">
            <span class="setting-label">Auth Token</span>
            <span class="setting-desc">Optional authentication bearer token</span>
          </div>
          <input type="password" id="ws-token-input" class="premium-text-input" placeholder="Enter token (optional)...">
        </div>
        
      </div>
      
      <div class="settings-footer">
        <button class="save-settings-btn" id="close-settings-btn">Done</button>
      </div>
    </div>
    
    <div class="chat-messages" id="chat-messages">
      <div class="msg assistant">
        Hey there! I am your native macOS Luna companion. Drag me anywhere on your screens, or click me to toggle this chat widget!
      </div>
    </div>
    
    <form class="chat-input-area" id="chat-form">
      <input type="text" class="chat-input" id="message-input" placeholder="Type a message..." autocomplete="off">
      <button type="submit" class="send-btn" aria-label="Send message">
        <svg viewBox="0 0 24 24">
          <path d="M2.01 21L23 12 2.01 3 2 10l15 2-15 2z"></path>
        </svg>
      </button>
    </form>
  </div>

  <script>/* elided for snapshot */</script>
"
`;
